.archive/apps/security/vaultwarden-external-service/route/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden-external-service
  namespace: security
spec:
  type: ExternalName
  externalName: ${VAULTWARDEN_IP}
  ports:
  - port: 8000
