.archive/apps/security/vaultwarden-external-service/route/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-external-forward
  namespace: security
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`bitwarden.${SECRET_DOMAIN}`)
    kind: Rule
    # middlewares:
    # - name: no-redirect
    #   namespace: networking
    services:
    - name: vaultwarden-external-service
      namespace: security
      port: 8000
